#76 Fixed related stories title spacing issue in single story page

--- a/core/static/css/v2/pages/story/story.less
+++ b/core/static/css/v2/pages/story/story.less
@@ -199,11 +199,7 @@
 }
 
 @media (min-width: @screen-lg-min) {
-  .related-stories {
-    h4 {
-      margin-left: -15px;
-    }
-  }
+
   .banner-container{
     width: 100%;
     height: 100vh;
